# causal-armor-langgraph-demo

./: .env.example  .gitignore  README.md  causal_armor.toml  langgraph.json  pyproject.toml  run_demo.py
docs/: example-attack-scenario.md  how-it-works.md  vllm-setup.md
scripts/: generate_pdf.py  start_vllm.sh  test_vllm_logprobs.py
src/demo/: __init__.py  adapters.py  agent.py  configurable_agent.py  configurable_guard.py  guard.py  schema_utils.py  state.py  tools.py
